# JARI

./: .gitignore  CMakeLists.txt  Jari.hpp  Partition.cpp  Partition.h  README.md  main.cpp
random/test/: catch.hpp
