cmake_minimum_required(VERSION 3.0.0)
project(JARI VERSION 0.1.0 LANGUAGES C CXX)

include(CTest)
enable_testing()
add_subdirectory(random)
set(SOURCES main.cpp Partition.cpp)
add_executable(JARI ${SOURCES})
add_definitions("-fmodules-ts -std=gnu++2b")
target_link_libraries(JARI effolkronium_random)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
