cmake_minimum_required(VERSION 3.0.0)
project(JARI VERSION 0.1.0 LANGUAGES C CXX)

include(CTest)
enable_testing()
add_subdirectory(random)
set(SOURCES main.cpp Partition.cpp)
add_compile_options("-fmodules-ts;-std=gnu++2b")
if(MINGW)
    add_link_options("-static;-static-libgcc;-static-libstdc++")
endif()
add_executable(JARI ${SOURCES})
target_link_libraries(JARI effolkronium_random)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
